feat(ui): add state management, start working on auth (#14)
